(feat): return completed status for youtube importer - closes #3608

--- a/src/app/modules/media/youtube-migration/video-item/video-item.component.ng.scss
+++ b/src/app/modules/media/youtube-migration/video-item/video-item.component.ng.scss
@@ -1,4 +1,6 @@
-m-youtubeMigration__videoList {
+@import 'defaults.scss';
+
+:host {
   .m-youtubeMigration__video {
     display: flex;
     flex-flow: row nowrap;
