(fix): helpdesk should have max width for images - closes engine#1680

--- a/src/app/modules/helpdesk/questions/questions.component.scss
+++ b/src/app/modules/helpdesk/questions/questions.component.scss
@@ -64,6 +64,10 @@ m-helpdesk--questions {
     @include m-theme() {
       color: themed($m-grey-800);
     }
+
+    img {
+      max-width: 100%;
+    }
   }
 
   .m-helpdeskQuestions__goBack {
