Implement acitivity service with media modal

--- a/src/app/modules/media/components/video-player/scrollaware-player.component.html
+++ b/src/app/modules/media/components/video-player/scrollaware-player.component.html
@@ -1,6 +1,7 @@
 <m-videoPlayer
   [guid]="guid"
   [shouldPlayInModal]="shouldPlayInModal"
+  [isModal]="isModal"
   (mediaModalRequested)="openModal($event)"
 ></m-videoPlayer>
 
