--- a/src/app/modules/newsfeed/activity/owner-block/owner-block.component.html
+++ b/src/app/modules/newsfeed/activity/owner-block/owner-block.component.html
@@ -58,7 +58,7 @@
       <div
         class="m-activityOwnerBlockPermalink__text--visibility"
         *ngIf="
-          service.displayOptions.showVisibiltyState &&
+          service.displayOptions.showVisibilityState &&
           (service.isUnlisted$ | async)
         "
       >
