Fixing translation build issue #3622

--- a/src/app/modules/channels/v2/feed/feed.component.html
+++ b/src/app/modules/channels/v2/feed/feed.component.html
@@ -45,7 +45,9 @@
         </ng-container>
 
         <ng-template #wireRewardsBrief>
-          <m-channelShop__briefWireRewards></m-channelShop__briefWireRewards>
+          <m-channelShop__lazy
+            component="m-channelShop__briefWireRewards"
+          ></m-channelShop__lazy>
         </ng-template>
       </ng-container>
     </div>
