Fixed some posts not filling full width of feed (mobile web) #3562

--- a/src/app/modules/channels/v2/feed/feed.component.scss
+++ b/src/app/modules/channels/v2/feed/feed.component.scss
@@ -13,6 +13,11 @@
     }
   }
 
+  .m-channelFeed__list {
+    @media screen and (max-width: $layoutMax2ColFixedWidth) {
+      min-width: 100%;
+    }
+  }
   .m-pageLayout__pane--right {
     padding-top: 20px * 3;
   }
