--- a/src/app/modules/pro/channel/channel.component.ng.scss
+++ b/src/app/modules/pro/channel/channel.component.ng.scss
@@ -105,14 +105,6 @@ $min-tablet-pro: 900px;
       grid-row: 2 / span 1;
       padding: 16px 8vw;
 
-      minds-avatar {
-        width: 90px;
-        height: 90px;
-        display: inline-flex;
-        align-items: center;
-        cursor: pointer;
-      }
-
       @media screen and (min-width: $max-mobile) and (max-width: $extra-wide-mobile) {
         flex-wrap: wrap;
       }
@@ -273,15 +265,6 @@ $min-tablet-pro: 900px;
       font-weight: bold;
     }
 
-    .m-proChannel__topbar .minds-avatar {
-      margin: 0;
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      background-position: center;
-      background-size: cover;
-    }
-
     // colors
     a.active,
     a:hover {
@@ -319,6 +302,27 @@ $min-tablet-pro: 900px;
         i.clear {
           display: inline-block !important;
         }
+      }
+    }
+
+    minds-avatar {
+      width: 100px;
+      height: 100px;
+      display: inline-flex;
+      align-items: center;
+      flex-shrink: 0;
+      cursor: pointer;
+
+      &:focus {
+        outline: none;
+      }
+      .minds-avatar {
+        margin: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        background-position: center;
+        background-size: cover;
       }
     }
   }
