Add z-index and min width to tooltip to keep it in bounds of wallet

--- a/src/app/modules/wallet/v2/dashboard.component.scss
+++ b/src/app/modules/wallet/v2/dashboard.component.scss
@@ -47,7 +47,8 @@ m-walletDashboard {
         }
       }
       .m-tooltip--bubble {
-        // z-index: 9999;
+        z-index: 9999;
+        min-width: 150px;
         font-size: 12px;
         line-height: 16px;
         @include m-theme() {
