(fix): on clicking cancel, direct to billing screen

--- a/src/app/modules/channels/v2/shop/memberships/support-tier.component.html
+++ b/src/app/modules/channels/v2/shop/memberships/support-tier.component.html
@@ -97,6 +97,7 @@
     <a
       *ngIf="!isOwner && supportTier.subscription_urn"
       class="m-cardButton-v2 cancel"
+      routerLink="/settings/billing/recurring-payments"
     >
       Cancel
     </a>
