Wrap speak your mind text to single line #3187

--- a/src/app/modules/composer/topbar-button/topbar-button.component.scss
+++ b/src/app/modules/composer/topbar-button/topbar-button.component.scss
@@ -14,4 +14,10 @@ m-composer__topbarButton {
     background-size: contain;
     background-position: center;
   }
+
+  .m-tooltip--bubble {
+    @media screen and (min-width: $max-mobile) {
+      width: max-content;
+    }
+  }
 }
