(chore): increase font size of titles - closes #3263

--- a/src/app/modules/newsfeed/activity/content/content.component.scss
+++ b/src/app/modules/newsfeed/activity/content/content.component.scss
@@ -105,7 +105,10 @@ m-activity__content {
 
 .m-activityContent__mediaTitle {
   &:not(.m-activityContent__mediaTitle--noDescription) {
-    font-weight: 500;
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 25px;
+    margin-bottom: 10px;
   }
 }
 
