(chore): remove groups suggestions widget

--- a/src/app/modules/newsfeed/newsfeed.component.html
+++ b/src/app/modules/newsfeed/newsfeed.component.html
@@ -162,7 +162,7 @@
         <m-suggestions__sidebar type="user"></m-suggestions__sidebar>
 
         <ng-container *mIfFeature="'navigation'">
-          <m-suggestions__sidebar type="group"></m-suggestions__sidebar>
+          <!-- <m-suggestions__sidebar type="group"></m-suggestions__sidebar> -->
 
           <m-discovery__sidebarTags></m-discovery__sidebarTags>
         </ng-container>
