--- a/src/app/modules/discovery/discovery.component.html
+++ b/src/app/modules/discovery/discovery.component.html
@@ -25,10 +25,10 @@
         <!-- [isPlusPage]="isPlusPage" -->
         <!-- ----------------------------------------- -->
         <m-suggestions__sidebar type="user"></m-suggestions__sidebar>
-        <m-suggestions__sidebar
+        <!-- <m-suggestions__sidebar
           *ngIf="!isPlusPage"
           type="group"
-        ></m-suggestions__sidebar>
+        ></m-suggestions__sidebar> -->
         <m-discovery__sidebarTags
           *ngIf="!isPlusPage"
         ></m-discovery__sidebarTags>
