--- a/src/app/modules/wallet/v2/tokens/settings/settings-tokens.component.html
+++ b/src/app/modules/wallet/v2/tokens/settings/settings-tokens.component.html
@@ -250,7 +250,9 @@
       </p>
       <div class="m-walletSettings__currentAddressContainer">
         <div class="m-walletPrimaryText">{{ currentAddress }}</div>
-        <a (click)="display = null" i18n="@@SETTINGS_TOKENS__CHANGE_ADDRESS"
+        <a
+          (click)="onChangeAddressClick()"
+          i18n="@@SETTINGS_TOKENS__CHANGE_ADDRESS"
           >Change Address</a
         >
       </div>
