(feat): changes to make fjord custom

--- a/src/app/common/layout/v3-topbar/v3-topbar.component.html
+++ b/src/app/common/layout/v3-topbar/v3-topbar.component.html
@@ -28,11 +28,11 @@
           (mouseleave)="mouseLeave()"
         >
           <img
-            [src]="cdnAssetsUrl + 'assets/logos/bulb.svg'"
+            [src]="cdnAssetsUrl + 'assets/fjord/logos/icon.png'"
             class="m-v3Topbar__logo--bulb"
           />
           <img
-            [src]="cdnAssetsUrl + 'assets/logos/logo.svg'"
+            [src]="cdnAssetsUrl + 'assets/fjord/logos/logo.png'"
             class="m-v3Topbar__logo--full"
           />
         </a>
@@ -71,10 +71,10 @@
             <a
               class="m-v3TopbarLoginWrapper__joinMindsNow"
               routerLink="/register"
-              title="Join Minds Now"
+              title="Join"
               i18n-title="@@COMMON__JOIN_MINDS_NOW"
             >
-              Join Minds Now
+              Join
             </a>
           </div>
         </ng-container>
