--- a/src/app/modules/forms/login/login.html
+++ b/src/app/modules/forms/login/login.html
@@ -61,7 +61,7 @@
 </ng-template>
 
 <div class="m-login__title">
-  <h3 *ngIf="showTitle">Login to Minds</h3>
+  <h3 *ngIf="showTitle">Login to Fjord</h3>
 
   <a
     *ngIf="showTitle"
@@ -142,7 +142,7 @@
     *ngIf="showTitle"
     i18n="@@LOGIN__JOIN_MINDS_NOW"
   >
-    Join Minds Now
+    Join Now
   </a>
 
   <div class="m-layout__row m-login__actions">
