--- a/src/app/modules/forms/register/register.html
+++ b/src/app/modules/forms/register/register.html
@@ -13,7 +13,8 @@
 </ng-template>
 
 <h3 *ngIf="showTitle" i18n="@@REGISTER__JOIN__TITLE">
-  Join the Minds Revolution
+  <!-- Join the Minds Revolution -->
+  Join
 </h3>
 <span
   class="m-register__alreadyAUser"
