--- a/src/app/modules/marketing/footer.component.html
+++ b/src/app/modules/marketing/footer.component.html
@@ -1,4 +1,4 @@
-<div class="m-marketing__footer">
+<div class="m-marketing__footer" *ngIf="false">
   <div class="m-marketingFooter__columns">
     <div
       class="m-marketingFooter__languageBar"
