--- a/src/app/modules/newsfeed/feeds/subscribed.component.html
+++ b/src/app/modules/newsfeed/feeds/subscribed.component.html
@@ -41,7 +41,7 @@
     <ng-container *mIfFeature="'boost-rotator'">
       <ng-container *mIfBrowser>
         <m-newsfeed--boost-rotator
-          *ngIf="showBoostRotator"
+          *ngIf="showBoostRotator && false"
         ></m-newsfeed--boost-rotator>
       </ng-container>
     </ng-container>
