--- a/src/app/modules/channels/v2/shop/memberships/memberships.component.html
+++ b/src/app/modules/channels/v2/shop/memberships/memberships.component.html
@@ -19,15 +19,27 @@
       </ng-container>
 
       <ng-template #consumerTitleHeadline>
-        <div
-          class="m-channelShopMembershipsTitle__headline"
-          ngPreserveWhitespaces
+        <ng-container
+          *ngIf="(supportTiers$ | async)?.length < 1; else shopHeadline"
         >
-          <ng-container i18n="@@CHANNELS_SHOP_MEMBERSHIPS_TITLE_HEADLINE"
-            >Access exclusive content through a monthly
-            contribution</ng-container
+          <div
+            class="m-channelShopMembershipsTitle__headline m-channelShopMembershipsTitle__headline--no-memberships"
+            i18n="@@CHANNELS_SHOP_MEMBERSHIPS_TITLE_HEADLINE__NO_MEMBERSHIPS"
           >
-        </div>
+            @{{ channel.username$ | async }} doesn't offer any memberships
+          </div>
+        </ng-container>
+        <ng-template #shopHeadline>
+          <div
+            class="m-channelShopMembershipsTitle__headline"
+            ngPreserveWhitespaces
+          >
+            <ng-container i18n="@@CHANNELS_SHOP_MEMBERSHIPS_TITLE_HEADLINE"
+              >Access exclusive content through a monthly
+              contribution</ng-container
+            >
+          </div>
+        </ng-template>
       </ng-template>
     </div>
 
