--- a/src/app/modules/suggestions/channel/sidebar.component.html
+++ b/src/app/modules/suggestions/channel/sidebar.component.html
@@ -15,10 +15,7 @@
   >
     You have no suggestions at this time
   </span>
-  <ul
-    class="m-suggestionsSidebar__list m-border"
-    *ngIf="(suggestions$ | async).length"
-  >
+  <ul class="m-suggestionsSidebar__list" *ngIf="(suggestions$ | async).length">
     <li
       *ngFor="let suggestion of suggestions$ | async | slice: 0:displayLimit"
       class="m-suggestionsSidebarList__item m-suggestionsSidebarList__item--{{
@@ -27,7 +24,11 @@
     >
       <ng-container [ngSwitch]="suggestion.entity.type">
         <ng-template ngSwitchCase="user">
-          <a [routerLink]="['/', suggestion.entity.username]">
+          <a
+            [routerLink]="['/', suggestion.entity.username]"
+            [hovercard]="suggestion.entity.guid"
+            [hovercardAnchor]="['left', 'top']"
+          >
             <div
               class="m-suggestionsSidebarListItem__avatar"
               [style.background-image]="
@@ -36,15 +37,17 @@
             ></div>
             <div class="m-suggestionsSidebarListItem__body">
               <div [title]="suggestion.entity.briefdescription">
-                <h4>{{ suggestion.entity.username }}</h4>
-                <span>{{ suggestion.entity.briefdescription }}</span>
+                <h4>{{ suggestion.entity.name }}</h4>
+                <span>
+                  <ng-container>@</ng-container>{{ suggestion.entity.username }}
+                </span>
               </div>
               <div class="m-layout__spacer"></div>
-              <i
+              <!-- <i
                 class="material-icons m-suggestionsSidebarListItem__passBtn"
                 (click)="pass(suggestion, $event)"
                 >close</i
-              >
+              > -->
               <minds-button-subscribe
                 [user]="suggestion.entity"
                 (subscribed)="remove(suggestion)"
