(chore): put plus nav in separate feature flag

--- a/src/app/common/layout/sidebar/navigation.component.html
+++ b/src/app/common/layout/sidebar/navigation.component.html
@@ -82,7 +82,7 @@
         class="m-sidebarNavigation__item"
         [routerLinkActive]="'m-sidebarNavigation__item--active'"
         routerLinkActiveOptions="{ exact: true }"
-        *mIfFeature="'plus-2020'"
+        *mIfFeature="'nav-plus-2020'"
       >
         <a routerLink="/discovery/plus" (click)="toggle()">
           <m-tooltip
