Fixed link to old translation page in old footer

--- a/src/app/modules/marketing/footer.component.html
+++ b/src/app/modules/marketing/footer.component.html
@@ -223,7 +223,10 @@
         </li>
 
         <li>
-          <a routerLink="/localization" i18n="@@COMMON_FOOTER__LANGUAGES">
+          <a
+            routerLink="https://translate.minds.com/"
+            i18n="@@COMMON_FOOTER__LANGUAGES"
+          >
             Languages
           </a>
         </li>
