--- a/src/app/modules/discovery/tags/sidebar-tags.component.ng.scss
+++ b/src/app/modules/discovery/tags/sidebar-tags.component.ng.scss
@@ -1,6 +1,8 @@
-m-discovery__sidebarTags {
+@import 'defaults.scss';
+
+:host {
   .m-sidebarWidget__body {
-    min-height: 260px;
+    min-height: 50px;
   }
 
   ul {
